@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.prosolo</groupId>
   <artifactId>prosolo-multimodule</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.3.0</version>
   <packaging>pom</packaging>
   <name>prosolo-multimodule</name>
   <modules>
@@ -12,8 +12,8 @@
       <module>spark-jobs</module>
   </modules>
   <properties>
-  	<hibernate.version>4.3.10.Final</hibernate.version>
-  	<slf4j.version>1.7.10</slf4j.version>
+  	<hibernate.version>4.3.11.Final</hibernate.version>
+  	<slf4j.version>1.7.25</slf4j.version>
 
   </properties>
   <dependencies>	
@@ -58,12 +58,12 @@
 	  <dependency>
 		  <groupId>com.google.code.gson</groupId>
 		  <artifactId>gson</artifactId>
-		  <version>2.2.2</version>
+		  <version>2.8.5</version>
 	  </dependency>
 	  <dependency>
 		  <groupId>org.projectlombok</groupId>
 		  <artifactId>lombok</artifactId>
-		  <version>1.16.16</version>
+		  <version>1.18.4</version>
 		  <scope>provided</scope>
 	  </dependency>
 
@@ -74,16 +74,15 @@
                 <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
+				<version>3.8.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
 				</configuration>
 			</plugin>
-						<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.1.0</version>
 				<configuration>
 					<skip>false</skip>
 				</configuration>
@@ -93,7 +92,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18</version>
+				<version>3.0.0-M1</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
 			</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
